# 21D2CT01WW-acpi-fixup

./: .gitignore  README.md  pixi.toml  pyproject.toml
archive/: 20260312_copilot_session_acpi_analysis.md  20260312_copilot_session_acpi_lid_usb.md  20260312_fixing_acpi_lid_and_usb.md  acpi_analysis_complete.md  acpi_override_new  dsdt_v2_lid_fix.aml
docs/: 20260312_acpi_fixes_complete.md  20260312_spi_recovery_log.md  20260313_ec_spi_deep_analysis.md  20260313_ec_spi_fl2_mapping.md  20260313_ec_spi_read_analysis.md  20260313_efi_nodccheck_reverse_round2.md  20260313_pd_controller_analysis.md  20260313_project_inventory.md  20260321_ec_deep_analysis.md  20260321_z13z16_firmware_inventory.md  20260322_ec_irq_reverse_analysis.md  ACPI_FIXES_APPLIED.md  QUICK_REFERENCE.txt  docs_style_guide.md  ec_bios_structure.aux  ec_bios_structure.tex  ec_bios_structure.toc  ec_deep_decompiled.txt  ec_fl2_analysis.md  ec_irq_decompiled.txt  ec_spi_operation_guide.md  ec_spi_read_20260313_analysis.md  ec_update_usb_build.md  file_date_audit_20260313.md  fwupd_cab_guid_retarget_experiment_20260313.md  fwupd_matching_analysis_20260313.md  pd_controller_analysis_20260313.md  project_inventory.md  thinkfan_setup_notes.md  usb4_analysis.md  z13z16_firmware_inventory.md
dsdt/: dsdt_rollback.dsl  dsdt_safe.dsl  dsdt_safe_audio_base.dsl  dsdt_v2_lid_fix.dsl  dsdt_v3_usb_fix.dsl
scripts/: EC_Deep_Decompile.java  EC_IRQ_Export.java  analyze_boot_config.py  analyze_ec_fl2.py  analyze_ec_spi_dump.py  analyze_firmware_collection.py  analyze_fl2_spi_mapping.py  analyze_pd_blobs.py  analyze_pd_blobs_diff.py  analyze_spi_usb4.py  apcb_primary_only_patch.py  apcb_usb4_patch.py  ch341a_flash.py  deep_ec_analysis.py  dfu_trace3.py  diff_firmware_versions.py  ec_ab_layout.py  ec_backup_check.py  ec_base_060_detail.py  ec_probe.py  (+39 more)
spi-tool/: Cargo.toml
spi-tool/crates/spi-image/: Cargo.toml
spi-tool/crates/spi-image/src/: apcb.rs  efs.rs  image.rs  lib.rs  psp.rs
spi-tool/xtask/: Cargo.toml
spi-tool/xtask/src/: main.rs
spi-tool/xtask/src/cmd/: diff.rs  extract.rs  info.rs  mod.rs  patch.rs  transplant.rs
(+213 files in other folders)
