[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spiflash"
version = "0.1.0"
description = "ThinkPad Z13 SPI Flash management tool"
requires-python = ">=3.12"

[project.scripts]
spiflash = "spiflash.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/ghidra_*.py" = ["F821", "E722"]
"scripts/dfu_trace*.py" = ["E701", "E702", "E722"]
