[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spiflash"
version = "0.1.0"
description = "ThinkPad Z13 SPI Flash management tool"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-cov>=5.0",
	"mypy>=1.10",
	"bandit>=1.7",
]

[project.scripts]
spiflash = "spiflash.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/ghidra_*.py" = ["F821", "E722"]
"scripts/dfu_trace*.py" = ["E701", "E702", "E722"]

[tool.pytest.ini_options]
addopts = "-q --cov=spiflash --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["spiflash"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
files = ["spiflash"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.bandit]
targets = ["spiflash"]
skips = ["B404", "B603", "B607"]
