[workspace]
resolver = "2"
members = ["xtask", "crates/spi-image"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Tinnci/acpi-fixup"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
byteorder = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prettytable-rs = "0.10"
colored = "3"

# Internal
spi-image = { path = "crates/spi-image" }
